force-app/main/default/objects/Delegate_Public_Group_Member__c/Delegate_Public_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Delegate Public Group Member</label>
    <nameField>
        <displayFormat>DPGM-{0000}</displayFormat>
        <label>Delegate Public Group Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegate Public Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>