force-app/main/default/objects/Delegate_Public_Group_Member__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Delegate__r.IsActive</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>