force-app/main/default/objects/Delegate_Public_Group_Member__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delegate_Public_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>