force-app/main/default/objects/Delegate_Public_Group_Member__c/fields/Delegate_ID__c.field-meta.xml
<CustomField>
    <fullName>Delegate_ID__c</fullName>
    <formula>CASESAFEID( Delegate__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegate ID</label>
    <type>Text</type>
</CustomField>