force-app/main/default/objects/Delegate_Public_Group_Member__c/fields/Delegate_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Public_Group__c</fullName>
    <label>Delegate Public Group</label>
    <referenceTo>Delegate_Public_Group__c</referenceTo>
    <relationshipLabel>Delegate Public Group Members</relationshipLabel>
    <relationshipName>Delegate_Public_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>