force-app/main/default/objects/Delegate_Public_Group_Member__c/listViews/All_DPGMs.listView-meta.xml
<ListView>
    <fullName>All_DPGMs</fullName>
    <columns>NAME</columns>
    <columns>Delegate__c</columns>
    <columns>Delegate_Public_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/26/2019 12:00 AM</value>
    </filters>
    <label>All DPGMs</label>
</ListView>